# rust-boids-wasm

./: .gitignore  Cargo.toml  Makefile.toml  README.md  index.html  index.js
benches/: bench_boids.rs
pkg/: boids.js  boids.min.js  boids_bg.wasm
src/: boids.rs  lib.rs  linalg.rs
