[package]
name = "boids"
version = "0.2.0"
authors = ["Craig Bester <me@craigbester.com>"]
edition = "2021"
publish = false

[features]
default = ["console_error_panic_hook"]

[lib]
# rlib is required for criterion.rs benchmarking but disables lto, build release versions with cdylib only
crate-type = ["cdylib", "rlib"]
# crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = {version = "0.2.83", default-features = false}
js-sys = {version = "0.3.60", default-features = false}
console_error_panic_hook = {version = "*", optional = true}

[dev-dependencies]
wasm-bindgen-test = "0.3.12" # NOTE: keep in sync with wasm-bindgen version
assert_approx_eq = "1.1"
criterion = "0.3"
rand = "0.8"

[[bench]]
name = "bench_boids"
harness = false

[profile.release]  # Attempts to minimize file size
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'
